remove: all langs except ruby

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,44 +23,44 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
         lang: [
-            acton,
-            c,
-            chapel,
-            codon,
-            cpp,
-            csharp,
-            crystal,
-            d,
-            dart,
+            # acton,
+            # c,
+            # chapel,
+            # codon,
+            # cpp,
+            # csharp,
+            # crystal,
+            # d,
+            # dart,
             # elixir,
             # fortran,
-            go,
+            # go,
             # hacklang,
             # haskell,
-            haxe,
-            java,
-            javascript,
-            julia,
-            kotlin,
+            # haxe,
+            # java,
+            # javascript,
+            # julia,
+            # kotlin,
             # lisp,
-            lua,
+            # lua,
             # nelua,
-            nim,
-            ocaml,
-            odin,
-            perl,
-            php,
+            # nim,
+            # ocaml,
+            # odin,
+            # perl,
+            # php,
             # pony,
-            python,
+            # python,
             # racket,
             ruby,
-            rust,
-            swift,
-            typescript,
-            v,
-            wasm,
+            # rust,
+            # swift,
+            # typescript,
+            # v,
+            # wasm,
             # wren,
-            zig,
+            # zig,
           ]
     steps:
       - run: lscpu
