--- a/bench/bench_ruby.yaml
+++ b/bench/bench_ruby.yaml
@@ -70,7 +70,7 @@ environments:
   - os: linux
     compiler: ruby3.3.0-preview1
     version: 3.3.0-preview1
-    docker:
+    docker: ruby:3.3.0-preview1
     include:
     runtime_included: false
     build: cp app.rb out
@@ -79,7 +79,7 @@ environments:
   - os: linux
     compiler: ruby3.3.0-preview1/yjit
     version: 3.3.0-preview1
-    docker:
+    docker: ruby:3.3.0-preview1
     include:
     runtime_included: false
     build: cp app.rb out
@@ -88,9 +88,9 @@ environments:
   - os: linux
     compiler: ruby3.3.0-preview1/rjit
     version: 3.3.0-preview1
-    docker:
+    docker: ruby:3.3.0-preview1
     include:
-    runtime_included: false
+    runtime_included: true
     build: cp app.rb out
     out_dir: out
     run_cmd: ruby --rjit -W0 app.rb
